--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-node_modules/
+node_modules
 /dist/
 upackages/build
 upackages/dist
@@ -15,5 +15,3 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-
-
