--- a/package.json
+++ b/package.json
@@ -14,41 +14,42 @@
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
-        "babel-core": "^6.22.1",
-        "babel-helper-vue-jsx-merge-props": "^2.0.3",
-        "babel-loader": "^7.1.1",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
         "babel-plugin-syntax-jsx": "^6.18.0",
         "babel-plugin-transform-runtime": "^6.22.0",
         "babel-plugin-transform-vue-jsx": "^3.5.0",
-        "babel-preset-env": "^1.3.2",
-        "babel-preset-stage-2": "^6.22.0",
-        "chalk": "^2.0.1",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-stage-2": "^6.24.1",
+        "chalk": "^2.4.1",
         "clean-webpack-plugin": "^0.1.19",
-        "css-loader": "^0.28.0",
-        "extract-text-webpack-plugin": "^3.0.0",
-        "file-loader": "^1.1.4",
-        "friendly-errors-webpack-plugin": "^1.6.1",
-        "html-webpack-plugin": "^2.30.1",
-        "less": "^3.0.1",
+        "css-loader": "^0.28.11",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "file-loader": "^1.1.11",
+        "friendly-errors-webpack-plugin": "^1.7.0",
+        "html-webpack-plugin": "^4.0.0-alpha",
+        "less": "^3.0.4",
         "less-loader": "^4.1.0",
-        "node-notifier": "^5.1.2",
+        "node-notifier": "^5.2.1",
         "optimize-css-assets-webpack-plugin": "^3.2.0",
-        "ora": "^1.2.0",
+        "ora": "^1.4.0",
         "portfinder": "^1.0.13",
-        "postcss-import": "^11.0.0",
-        "postcss-loader": "^2.0.8",
-        "postcss-url": "^7.2.1",
+        "postcss-import": "^11.1.0",
+        "postcss-loader": "^2.1.5",
+        "postcss-url": "^7.3.2",
         "postcss-write-svg": "^3.0.1",
-        "semver": "^5.3.0",
-        "shelljs": "^0.7.6",
-        "uglifyjs-webpack-plugin": "^1.1.1",
-        "url-loader": "^0.5.8",
-        "vue-loader": "^13.3.0",
-        "vue-style-loader": "^3.0.1",
-        "vue-template-compiler": "^2.5.2",
-        "webpack-bundle-analyzer": "^2.9.0",
-        "webpack-dev-server": "^2.9.1",
-        "webpack-merge": "^4.1.0"
+        "semver": "^5.5.0",
+        "shelljs": "^0.7.8",
+        "uglifyjs-webpack-plugin": "^1.2.6",
+        "url-loader": "^0.5.9",
+        "vue-loader": "^15.2.4",
+        "vue-style-loader": "^3.1.2",
+        "vue-template-compiler": "^2.5.16",
+        "webpack": "^4.12.0",
+        "webpack-bundle-analyzer": "^2.13.1",
+        "webpack-cli": "^3.0.6",
+        "webpack-dev-server": "^3.1.4",
+        "webpack-merge": "^4.1.3"
     },
     "engines": {
         "node": ">= 6.0.0",
